fixed the icon not showing

--- a/styles/inline.css
+++ b/styles/inline.css
@@ -83,9 +83,9 @@ html {
     outline: none;
     cursor: pointer; }
   .header #butRefresh {
-    background: url(/upload/pwa-todo/images/ic_refresh_white_24px.svg) center center no-repeat; }
+    background: url(https://www.jenrenalcare.com/upload/pwa-todo/images/ic_refresh_white_24px.svg) center center no-repeat; }
   .header #butAdd {
-    background: url(/upload/pwa-todo/images/ic_add_white_24px.svg) center center no-repeat; }
+    background: url(https://www.jenrenalcare.com/upload/pwa-todo/images/ic_add_white_24px.svg) center center no-repeat; }
 
 .header__title {
   font-weight: 400;
